--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,34 +1,36 @@
 <div class="mat-app-background">
 
-  <mat-toolbar class="header"
-               color="primary">
-    <mat-toolbar-row>
-      <span class="title">Ethereum-Event-Scan</span>
-    </mat-toolbar-row>
-  </mat-toolbar>
+    <mat-toolbar class="header"
+                 color="primary">
+        <mat-toolbar-row>
+            <span class="title">Ethereum-Event-Scan</span>
+        </mat-toolbar-row>
+    </mat-toolbar>
 
-  <!-- Main content -->
-  <div class="row">
-    <div class="col-12">
-      <app-settings [abi]="control.abi" [connected]="control.entity.connected"
-                    [contract]="control.contract" [endBlock]="control.endBlock"
-                    [lastBlock]="control.entity.currentBlock"
-                    [provider]="control.provider"
-                    [startBlock]="control.startInitial">
-      </app-settings>
+    <!-- Main content -->
+    <div class="row">
+        <div class="col-12">
+            <app-settings [abi]="control.abi" [connected]="control.entity.connected"
+                          [contract]="control.contract" [endBlock]="control.endBlock"
+                          [lastBlock]="control.entity.currentBlock"
+                          [provider]="control.provider"
+                          [startBlock]="control.startInitial">
+            </app-settings>
+        </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-12">
-      <app-events-list></app-events-list>
+    <div class="row">
+        <div class="col-12">
+            <app-events-list></app-events-list>
+        </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="footer">An open source Ethereum Event Explorer developed by Markus Sprunck. Available on <a
-      href="https://github.com/MarkusSprunck/ethereum-event-scan" class="table-link" target="_blank">GitHub</a></div>
-  </div>
+    <div class="row">
+        <div class="footer">An open source Ethereum Event Explorer developed by Markus
+            Sprunck. Available on <a
+                    class="table-link"
+                    href="https://github.com/MarkusSprunck/ethereum-event-scan" target="_blank">GitHub</a></div>
+    </div>
 
 </div>
 
