--- a/src/app/components/modal-dialog/modal-dialog.component.scss
+++ b/src/app/components/modal-dialog/modal-dialog.component.scss
@@ -25,7 +25,7 @@
 
 .modal-separator {
   height: 1px;
-  background-color: rgba(0,0,0,0.12);
+  background-color: rgba(0, 0, 0, 0.12);
   margin: 0.75rem 0 1rem 0;
   width: 100%;
 }
